fixed css (hopefully supported on mobile now), added hyperlinks to each song in the list, added auto-run on page load (this has local issues, but may work otherwise)

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 h1, h2, p, a, button {
-  font-family: 'Gelasio', serif;
-  font-weight: 500;
-  font-size: 1.5rem;
+  /*font-family: 'Gelasio', serif;*/
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  /*font-size: 1.5em;*/
+}
+body {
+  background: -webkit-linear-gradient(left, #ff6e7f, #bfe9ff)
 }
 a {
   text-decoration: none;
@@ -13,14 +17,28 @@ img {
   vertical-align: middle;
 }
 
+.bounds {
+  margin-bottom: 7em;
+  margin-top: 7em;
+  margin-left: 2em;
+  margin-right: 2em;
+  text-align: center;
+  font-size: 1.3em;
+}
+
 .App {
   text-align: center;
+}
+
+.col-w {
+  column-width: auto;
 }
 
 button {
   background-color: #a5d5ff;
   border: none;
   color: white;
+  padding-top: 50%;
   padding: 15px 25px;
   text-align: center;
   font-size: 16px;
@@ -30,50 +48,14 @@ button {
 }
 
 .center-v {
-  text-align: center;
+  /*text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);*/
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 
 #otis li {
   list-style-type: none;
